[package]
name = "esp32-rustls-demo"
version = "0.1.0"
authors = ["Ellen Poe"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]
default = ["native"]

[dependencies]
attohttpc = { git = "https://github.com/killyourphone/attohttpc", branch = "esp32", default-features = false, features = ["rustls"] }
esp-idf-sys = { version = "0.30.3", features = ["binstart"] }
esp-idf-svc = "0.36.6"
esp-idf-hal = "0.32.4"
embedded-svc = "0.16"
ring = { git = "https://github.com/killyourphone/ring", branch = "esp32", features = ["size_optimized"] }

[patch.crates-io]
cc = { git = "https://github.com/killyourphone/cc-rs", branch = "esp32" }
# Overriding ureq is necessary for some reason (it's a build-time dep of embuild)
ureq = { git = "https://github.com/killyourphone/ureq", branch = "esp32" }

[build-dependencies]
embuild = "0.28"
anyhow = "1"
